--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,161 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+/* custom properies */
+
+:root {
+	--heading-color: #003760;
+	--primary-color: #2c384a;
+	--secondary-color: #314056;
+	--highlight-color: #1a759f;
+	--error: #f57c00;
+	--accent-color: #039be5;
+	--gray: #eceff1;
+	--bg-color: #eceff1;
+	--white: #fff;
+	--input-color: #777;
+	--light-gray: #ddd;
+}
+/* ******************************************************************** */
+
+/* RESET */
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Remove default margin */
+* {
+	margin: 0;
+	padding: 0;
+	font: inherit;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'],
+li {
+	list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+	scroll-behavior: smooth;
+}
+
+html,
+body {
+	min-height: 100%;
+	overflow-x: hidden;
+}
+/* Set core body defaults */
+body {
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+	text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+svg,
+picture {
+	max-width: 100%;
+	display: block;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+	html:focus-within {
+		scroll-behavior: auto;
+	}
+
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
+}
+
+/* ******************************************************************** */
+
+/* ******************************************************************** */
+
+/* General styling */
+
+body {
+	font-family: Poppins, sans-serif;
+	font-size: 1rem;
+	background-color: var(--bg-color);
+}
+
+.btn {
+	background: var(--primary-color);
+	width: 100%;
+	border: none;
+	padding: 6px 12px;
+	border-radius: .2em;
+	color: var(--white);
+	font-weight: 500;
+	cursor: pointer;
+	font-size: 1rem;
+	transition: all .2s ease;
+}
+
+.btn:hover {
+	background: var(--highlight-color);
+	color: #fff;
+}
+
+/* Layout */
+
+.page-title {
+	display: inline-block;
+	font-size: 1rem;
+	color: var(--heading-color);
+}
+
+/* Forms */
+
+label {
+	display: block;
+	margin: 24px auto;
+}
+
+label span {
+	display: block;
+	margin-bottom: 5px;
+	text-transform: capitalize;
+	font-weight: 400;
+	font-size: 1rem;
+	color: var(--input-color);
+}
+
+input,
+textarea {
+	padding: 8px 6px;
+	font-size: 1rem;
+	color: var(--input-color);
+	width: 100%;
+	border: 1px solid var(--light-gray);
+
+	border-radius: .2em;
+}
+
+textarea {
+	min-height: 160px;
+}
+
+.error {
+	color: var(--error);
+	border-radius: 4px;
+	padding: 4px;
 }
