--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
-	width: 15em;
-	min-width: 15em;
+	width: 13em;
+	min-width: 13em;
 	background-color: var(--primary-color);
 	min-height: 100vh;
 	position: relative;
@@ -13,10 +13,12 @@
 }
 
 .sidebar .user {
-	font-weight: bold;
+	font-size: .9rem;
+	font-weight: 500;
+	color: var(--gray);
 	text-align: center;
-	padding: 40px 30px;
-	border-bottom: 1px solid var(--gray);
+	padding: 20px;
+	border-bottom: 2px solid var(--secondary-color);
 }
 
 .sidebar .links {
