--- a/src/index.css
+++ b/src/index.css
@@ -101,12 +101,12 @@ body {
 	background: var(--primary-color);
 	width: 100%;
 	border: none;
-	padding: 6px 12px;
-	border-radius: .2em;
+	padding: .3em .7em;
+	border-radius: 1em;
 	color: var(--white);
-	font-weight: 500;
+	font-weight: 400;
 	cursor: pointer;
-	font-size: 1rem;
+	font-size: .8rem;
 	transition: all .2s ease;
 }
 
