--- a/src/pages/project/Project.css
+++ b/src/pages/project/Project.css
@@ -10,11 +10,18 @@
 	background-color: var(--white);
 	padding: 30px;
 	border-radius: 4px;
+	border-left: 4px solid var(--accent-color);
 }
 .project-summary .due-date {
-	margin: 10px 0;
-	font-size: 0.9em;
-	color: var(--title-color);
+	margin-top: .1em;
+	font-size: 0.7em;
+	color: var(--heading-color);
+}
+
+.project-summary h2 {
+	font-size: 1.1rem;
+	color: var(--accent-color);
+	font-weight: 500;
 }
 .project-summary .details {
 	margin: 30px 0;
@@ -25,6 +32,7 @@
 .project-summary h4 {
 	color: var(--text-color);
 	font-size: 0.9em;
+	font-weight: 500;
 }
 .project-summary .assigned-users {
 	display: flex;
@@ -32,6 +40,7 @@
 }
 .project-summary .assigned-users .avatar {
 	margin-right: 10px;
+	border: 2px solid var(--accent-color);
 }
 .project-summary + .btn {
 	margin-top: 20px;
