--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -19,7 +19,7 @@
 	align-items: center;
 	justify-content: center;
 	margin-right: auto;
-	font-size: 1.2rem;
+	font-size: var(--logo);
 }
 
 .logo_layout {
