--- a/src/pages/signup/Signup.css
+++ b/src/pages/signup/Signup.css
@@ -9,7 +9,7 @@
 }
 
 .auth-form h2 {
-	font-size: 1.5rem;
+	font-size: var(--important);
 	/* text-align: center; */
 	font-weight: 700;
 	color: var(--primary-color);
