--- a/src/pages/project/Project.css
+++ b/src/pages/project/Project.css
@@ -9,7 +9,7 @@
 .project-summary {
 	background-color: var(--white);
 	padding: 30px;
-	border-radius: 4px;
+	border-radius: 16px;
 	border-left: 4px solid var(--accent-color);
 }
 .project-summary .due-date {
@@ -60,6 +60,15 @@
 }
 
 /* project comments */
+.project-comments {
+	background: rgba(255, 255, 255, 0.13);
+	border-radius: 16px;
+	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.08);
+	backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(5px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	padding: 1.5em;
+}
 .project-comments label {
 	margin-bottom: 0px;
 }
@@ -109,6 +118,9 @@
 	font-size: var(--primary);
 }
 
+.add-comment .btn_secondary {
+	margin-top: 1em;
+}
 /* comments scrollbar */
 .project-comments {
 	max-height: 800px;
