--- a/src/components/onlineUsers/OnlineUsers.css
+++ b/src/components/onlineUsers/OnlineUsers.css
@@ -2,8 +2,8 @@
 	width: 11em;
 	min-width: 11em;
 	padding: 30px;
-	background: var(--input-color);
-	color: var(--gray);
+	background: var(--white);
+	color: var(--input-color);
 	font-size: var(--primary);
 }
 
@@ -38,6 +38,6 @@
 }
 
 .online {
-	color: var(--white);
+	color: var(--accent-color);
 	font-size: var(--secondary);
 }
