--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -33,12 +33,16 @@
 .sidebar .links a {
 	display: flex;
 	font-size: var(--primary);
-
 	font-weight: 500;
 	text-decoration: none;
 	width: 100%;
 	padding: .3em;
 	color: var(--gray);
+	transition: all .3s ease;
+}
+
+.sidebar .links a:hover {
+	color: var(--accent-color);
 }
 
 .sidebar .links img {
