--- a/src/components/projectList/ProjectList.css
+++ b/src/components/projectList/ProjectList.css
@@ -4,6 +4,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
 	grid-gap: 1em;
 }
+
 .project-list a {
 	text-decoration: none;
 	color: inherit;
@@ -14,6 +15,11 @@
 	-webkit-backdrop-filter: blur(5px);
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	padding: 1em;
+	transition: all .3s ease;
+}
+
+.project-list a:hover {
+	transform: scale(1.03);
 }
 .project-list h4 {
 	font-size: var(--primary);
