--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,5 +1,4 @@
 .sidebar {
-	position: relative;
 	width: 13em;
 	min-width: 13em;
 	background-color: var(--primary-color);
@@ -68,7 +67,7 @@
 	position: absolute;
 	bottom: 2em;
 	right: calc(50% - 3em);
-	transform: translateY(calc(5));
+	transform: translateX(-50%);
 	width: 3em;
 	height: 3em;
 }
